# us-stock-scanner

./: .gitignore  README.md  ROADMAP.md  app.py  bot.py  config.breakout.example.yaml  config.example.yaml  config.gap.example.yaml  config.ma_cross.example.yaml  config.macd.example.yaml  config.squeeze.example.yaml  config.test-strategy.yaml  pyproject.toml  requirements.txt  run.ps1  scan.bat  scan.ps1  start_ui.bat  start_ui.ps1  watchlist.example.txt
.streamlit/: secrets.toml.example
docs/: SIGNAL_LOGIC.md  STRATEGY_REVIEW.md
src/us_stock_scanner/: __init__.py  __main__.py  auto_pick.py  cli.py  config.py  data.py  display.py  filters.py  indicators.py  journal.py  market_regime.py  outcomes.py  presets.py  scanner.py  signal_engine.py  storage.py  timeframes.py  trade_signal.py  ui_launcher.py  universe.py  watchlist.py
tests/: test_signal_engine.py
