[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "us-stock-scanner"
version = "0.1.0"
description = "Screen US equities by price, volume, momentum, and RSI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "requests>=2.31.0",
    "lxml>=5.0.0",
    "streamlit>=1.32.0",
]

[project.scripts]
stock-scan = "us_stock_scanner.cli:main"
stock-scan-ui = "us_stock_scanner.ui_launcher:main"
# stock-scan-bot would require packaging the root bot.py. For now run directly: python bot.py (after installing its deps)

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest>=8.0"]
cloud = ["libsql"]          # For Turso / remote libSQL (enables publishing with persistent DB)
telegram = ["python-telegram-bot>=21.0"]  # For Telegram bot deployment option